# learn-rust

./: Cargo.toml  make.sh  readme.md
data/: quats.csv
src/: csv_reader.rs  csv_reader_tests.rs  quat.rs  read_quats_from_csv.rs  sample.rs  types_conversion.rs
unsorted/: access_right.rs  adult_test.rs  array_tests.rs  calc.rs  compare_numbers.rs  convert_types.rs  directions_game.rs  enum_test.rs  fact.rs  functors.rs  greeting.rs  hashmap_tests.rs  hashset_tests.rs  integers_sum.rs  it_conf_reg.rs  iter_tests.rs  linalg_test.rs  odd_numbers.rs  ownership.rs  packed_struct_test.rs  quat_tests.rs  references.rs  serializer_tests.rs  slice_tests.rs  smart_lamp.rs  stdlib_tests.rs  struct_to_bytes.rs  try_into_tests.rs  tuples_test.rs  value_signum.rs  vec_tests.rs  vector3d.rs
